# mesh-simplification

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  .gitmessage  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CPPLINT.cfg  CppCoreCheckAll.ruleset  LICENSE  MeshSimplification.ruleset  MeshSimplification.sln  MeshSimplification.sln.DotSettings  README.md  vcpkg-configuration.json  vcpkg.json
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  WORK_ITEM.yml
MeshSimplification/: MeshSimplification.vcxproj  MeshSimplification.vcxproj.filters  main.cpp
MeshSimplification/geometry/: face.cpp  face.h  half_edge.h  half_edge_mesh.cpp  half_edge_mesh.h  mesh_simplifier.cpp  mesh_simplifier.h  vertex.h
MeshSimplification/graphics/: camera.h  material.h  mesh.cpp  mesh.h  obj_loader.cpp  obj_loader.h  scene.cpp  scene.h  shader_program.cpp  shader_program.h  texture2d.cpp  texture2d.h  window.cpp  window.h
MeshSimplification/shaders/: mesh_fragment.glsl  mesh_vertex.glsl
MeshSimplificationTest/: MeshSimplificationTest.vcxproj  MeshSimplificationTest.vcxproj.filters  main.cpp
MeshSimplificationTest/geometry/: face_test.cpp  half_edge_mesh_test.cpp  half_edge_test.cpp  vertex_test.cpp
MeshSimplificationTest/graphics/: mesh_test.cpp  obj_loader_test.cpp
cmake/vcpkg-triplets/: x64-windows-asan.cmake  x86-windows-asan.cmake
src/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/app/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/app/assets/shaders/: mesh.frag  mesh.vert
src/app/include/app/: app.h
src/assets/shaders/: fragment.glsl  mesh.frag  mesh.vert  vertex.glsl
src/engine/: CMakeLists.txt  device.cpp  engine.cpp  glslang_compiler.cpp  image.cpp  instance.cpp  memory.cpp  model.cpp  scene.cpp  shader_module.cpp  swapchain.cpp  window.cpp
src/engine/assets/shaders/: vertex.glsl
src/engine/include/: device.h  engine.h  glslang_compiler.h  instance.h  queue.h  scene.h  shader_module.h  swapchain.h  window.h
src/engine/include/engine/: buffer.h  data_view.h  device.h  engine.h  glslang_compiler.h  image.h  instance.h  memory.h  mesh.h  model.h  queue.h  shader_module.h  swapchain.h  uniform_buffer.h  window.h
src/engine/shaders/: fragment.glsl  vertex.glsl
src/game/: CMakeLists.txt  game.cpp  game.h  main.cpp
src/game/assets/shaders/: vertex.glsl
src/game/include/: game.h
src/game/include/game/: game.h
src/geometry/: CMakeLists.txt  face.cpp  face.h  half_edge.h  half_edge_mesh.cpp  half_edge_mesh.h  mesh_simplifier.cpp  mesh_simplifier.h  vertex.h
src/geometry/include/geometry/: face.h  half_edge.h  half_edge_mesh.h  mesh_simplifier.h  vertex.h
src/graphics/: CMakeLists.txt  arc_camera.cpp  arc_camera.h  arcball.cpp  arcball.h  buffer.h  camera.cpp  camera.h  data_view.h  device.cpp  device.h  engine.cpp  engine.h  glslang_compiler.cpp  glslang_compiler.h  image.cpp  image.h  instance.cpp  instance.h  memory.cpp  memory.h  mesh.cpp  mesh.h  obj_loader.cpp  obj_loader.h  physical_device.cpp  physical_device.h  queue.h  scene.cpp  shader_module.cpp  shader_module.h  swapchain.cpp  swapchain.h  uniform_buffer.h  window.cpp  window.h
src/graphics/include/graphics/: arc_camera.h  arcball.h  buffer.h  camera.h  device.h  engine.h  glslang_compiler.h  image.h  instance.h  memory.h  mesh.h  obj_loader.h  physical_device.h  queue.h  scene.h  shader_module.h  swapchain.h  uniform_buffer.h  window.h
src/graphics/include/math/: spherical_coordinates.h
src/math/: CMakeLists.txt  spherical_coordinates.cpp  spherical_coordinates.h
src/math/include/: vector3.h
src/math/include/math/: spherical_coordinates.h
test/: CMakeLists.txt
test/math/: vector3_test.cpp
tests/: CMakeLists.txt  device.h  vector3.h
tests/engine/: data_view_test.cpp
tests/geometry/: face_test.cpp  half_edge_mesh_test.cpp  half_edge_test.cpp  vertex_test.cpp
tests/graphics/: arcball_test.cpp  data_view_test.cpp  obj_loader_test.cpp
tests/graphics/math/: spherical_coordinates_test.cpp
tests/math/: spherical_coordinates_test.cpp  vector3_test.cpp
